--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
     <packaging>jar</packaging>
 
     <properties>
+        <!-- 设置java版本 -->
         <java.version>1.8</java.version>
+        <!-- 文件拷贝时的编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 编译时的编码 -->
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     </properties>
 
     <dependencies>
@@ -104,8 +110,23 @@
 
     </dependencies>
 
+    <!--项目构建工具-->
     <build>
-        <!--maven打包工具-->
+        <!-- 资源文件配置 -->
+        <resources>
+            <!-- 打包时排除多余的配置文件 -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>profiles/**</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources/profiles/${profiles.active}</directory>
+            </resource>
+        </resources>
+        <!--maven打包工具；打包输出为一个jar包，里面包含所有引用的第三方jar包-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -113,5 +134,35 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- profile 配置 -->
+    <profiles>
+        <!-- 开发环境 -->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <!-- 节点名字 profiles.active 是自己设置的 -->
+                <profiles.active>dev</profiles.active>
+            </properties>
+            <activation>
+                <!-- 默认激活该profile节点-->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!-- 测试环境 -->
+        <profile>
+            <id>test</id>
+            <properties>
+                <profiles.active>test</profiles.active>
+            </properties>
+        </profile>
+        <!-- 生产环境 -->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <profiles.active>prod</profiles.active>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
